--- a/index.html
+++ b/index.html
@@ -1,28 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<!-- ========================================HEAD====================================== -->
 <head>
-	<title>What's Your Flextination</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" 
-	integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>Flextination</title>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
+
+<!-- ========================================BODY====================================== -->
 <body>
-	<header>
-		
-	</header>
-	<div id="wrapper">
-		<div id="main-content" class="container">
-			<
-		</div>
-	<div class="push"></div>
-	</div>
-	<footer class="footer">
-		<p id="copyright">&copy;Copyright 2016 Team 8</p>
-	</footer>
-	<script type="text/javascript" src="assets/javascript/app.js"></script>
-	<script type="text/javascript" src="assets/javascript/flights.js"></script>
-	<script type="text/javascript" src="assets/javascript/sites.js"></script>
-	<script type="text/javascript" src="assets/javascript/weather.js"></script>
+  <nav class="blue darken-3" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Flextination</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+      <!-- When the side icon is clicked, it activated the nav-mobile id -->
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+
+    <div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+      <hr>
+      <h3 class="header center black-text">Plan your trip before traveling!</h3>
+      <div class="row center">
+        <h5 class="header col s12 dark">We take care of the hassle of organizing your trip<br><br> so you can have a good time!</h5>
+      </div>
+      
+      <div class="row center">
+        <button href="#modal1" class="btn-large waves-effect waves-light blue modal-trigger">Quick Guide</button>
+          <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Instructions: </h4>
+      <p>1) Select the start and end dates that you plan on traveling.</p>
+      <p>2) Choose the destination you have in mind.</p>
+      <p>3) Let us take care of the rest.</p>
+
+
+    </div>
+    <div class="modal-footer">
+      <a href="" class=" modal-action modal-close waves-effect waves-green btn-flat">Got it!</a>
+    </div>
+  </div>
+</div>
+      
+      	Start Date: 
+		<input type="date" class="datepicker">
+		End Date: 
+		<input type="date" class="datepicker">
+		Destination: 
+		<input id="autocomplete" placeholder="Enter your address" onFocus="geolocate()" type="text" class="form-control" aria-describedby="basic-addon1"></input>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/sites.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGbLaGsRnpqv8rORu25GIJ5Xs_NzU0xR0&callback=initAutocomplete&libraries=places" async defer></script>
+  <script src="js/index.js"></script>
+
 </body>
+
 </html>
