--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- ========================================BODY====================================== -->
 <body>
-  <nav class="blue darken-3" role="navigation">
+  <nav class="#00acc1 cyan darken-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Flextination</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
@@ -42,7 +42,7 @@
       </div>
       
       <div class="row center">
-        <button href="#modal1" class="btn-large waves-effect waves-light blue modal-trigger">Quick Guide</button>
+        <button href="#modal1" class="btn-large waves-effect waves-light #0097a7 cyan darken-2 modal-trigger">Quick Guide</button>
           <!-- Modal Structure -->
   <div id="modal1" class="modal">
     <div class="modal-content">
@@ -65,6 +65,9 @@
 		<input type="date" class="datepicker">
 		Destination: 
 		<input id="autocomplete" placeholder="Enter your address" onFocus="geolocate()" type="text" class="form-control" aria-describedby="basic-addon1"></input>
+		<button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    	<i class="material-icons right">send</i>
+  </button>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
